# charabia-js

./: .gitignore  Cargo.toml  README.md  bench.js  build.sh  index.html  modules.html  package-lock.json  package.json
assets/: highlight.css  navigation.js  search.js
classes/: Token.html
enums/: Language.html  Script.html  SeparatorKind.html  TokenKind.html
functions/: segment.html  tokenize.html
src/: lib.rs
src/models/: kind.rs  language.rs  mod.rs  script.rs  token.rs
