[package]
name = "charabia-js"
version = "0.1.0"
edition = "2021"
description = "A WebAssembly binding for the charabia multilingual text tokenizer used by Meilisearch."
repository = "https://github.com/codytseng/charabia-js"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
charabia = "0.9.1"